<resources>
    <string name="app_name" translatable="false">Muzei Pixiv Source</string>
    <string name="source_title" translatable="false">Pixiv</string>

    <!--Activity-->
    <string name="muzei_not_install_message">This app needs Muzei to function, install it from Play Store?</string>

    <!--Toast-->
    <string name="login_fail">Login failed</string>

    <!--Preference-->
    <string name="pref_title_account">Account</string>

    <string name="pref_pixiv_summary">Login to access full features</string>
    <string name="pref_pixiv_sign_in">Login Pixiv</string>
    <string name="pref_pixiv_sign_out">Logout</string>
    <string name="pref_pixiv_sign_out_confirm">Confirm logout?</string>

    <string name="pref_title_muzei" translatable="false">Muzei</string>

    <string name="pref_muzei">Open Muzei</string>
    <string name="pref_muzei_summary">Open muzei to change settings</string>
    <string name="pref_muzei_interval">Change interval</string>
    <string name="pref_muzei_interval_30">30 minute</string>
    <string name="pref_muzei_interval_60">1 hour</string>
    <string name="pref_muzei_interval_120">2 hour</string>
    <string name="pref_muzei_interval_180">3 hour</string>
    <string name="pref_muzei_interval_360">6 hour</string>
    <string name="pref_muzei_interval_720">12 hour</string>
    <string name="pref_muzei_interval_1440">1 day</string>
    <string name="pref_muzei_interval_never">Never</string>

    <string name="pref_title_fetch">Fetch</string>

    <string name="pref_fetch_origin">Origin image</string>
    <string name="pref_fetch_origin_summary_on">Download origin image</string>
    <string name="pref_fetch_origin_summary_off">Download resized image</string>

    <string name="pref_fetch_number">Fetch number</string>
    <string name="pref_fetch_number_summary">Number of image data fetched at each update</string>

    <string name="pref_fetch_mode">Mode</string>
    <string name="pref_fetch_mode_dialog">Fetch mode</string>
    <string name="pref_fetch_mode_ranking">Ranking</string>
    <string name="pref_fetch_mode_recommend">Recommend</string>
    <string name="pref_fetch_mode_bookmark">Bookmark</string>

    <string name="pref_fetch_ranking">Ranking category</string>
    <string name="pref_fetch_mode_ranking_daily">Daily</string>
    <string name="pref_fetch_mode_ranking_weekly">Weekly</string>
    <string name="pref_fetch_mode_ranking_monthly">Monthly</string>

    <string name="pref_fetch_bookmark">Private bookmark</string>
    <string name="pref_fetch_bookmark_summary_on">Include private bookmark</string>
    <string name="pref_fetch_bookmark_summary_off">Does not include private bookmark</string>

    <string name="pref_fetch_mirror">Image download mirror</string>

    <string name="pref_title_filter">Filter</string>

    <string name="pref_filter_size">Minimum resolution</string>
    <string name="pref_filter_size_summary">Exclude small images</string>

    <string name="pref_filter_safe">Safe mode</string>
    <string name="pref_filter_safe_summary_on">Does not fetch R18 image</string>
    <string name="pref_filter_safe_summary_off">Fetch R18 image</string>

    <string name="pref_filter_view_summary">Limit the minimum number of views</string>
    <string name="pref_filter_view">Minimum views</string>

    <string name="pref_filter_bookmark_summary">Limit the minimum number of bookmarks</string>
    <string name="pref_filter_bookmark">Minimum bookmarks</string>

    <string name="pref_fetch_cleanup_summary">Remove previous fetch images from muzei history</string>
    <string name="pref_fetch_cleanup">Clean up history</string>

    <string name="pref_fetch_fallback_summary">when fetch failed, try fallback source (walkthrough source)</string>
    <string name="pref_fetch_fallback">Fallback source</string>

    <!-- Login -->
    <string name="title_activity_pixiv_login">Login Pixiv</string>
    <string name="login_username_hint">Username / Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="button_update">Fetch new image</string>
    <string name="pref_fetch_random_summary">Random sorting fetch results</string>
    <string name="pref_fetch_random">Random sort</string>
    <string name="muzei_not_install_title">Muzei not installed</string>
    <string name="pref_filter_illust_summary">Will only fetch illust</string>
    <string name="pref_filter_illust">Filter illust</string>
    <string name="button_open">Open</string>
    <string name="button_share">Share</string>
    <string name="button_save">Download</string>
    <string name="pref_fetch_direct">Direct connection</string>
    <string name="pref_fetch_direct_summary">Bypass network filter, recommended disabled.</string>
</resources>
